# VntApp

./: README.md  build.gradle  flutter_rust_bridge.yaml  local.properties  pubspec.yaml  settings.gradle
android/app/: build.gradle
app/: build.gradle
assets/: log4rs.yaml
gradle/wrapper/: gradle-wrapper.properties
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: about_page.dart  connect_log.dart  connected_page.dart  custom_app_bar.dart  data_persistence.dart  main.dart  network_config.dart  network_config_input_page.dart  settings_page.dart
lib/utils/: ip_utils.dart
lib/vnt/: vnt_api.dart  vnt_manager.dart
lib/widgets/: color_changing_button.dart  custom_tooltip_text_field.dart  dual_bar_chart.dart  legend_widget.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/.cargo/: config
rust/src/: frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs
rust/src/api/: mod.rs  vnt_api.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_vnt_app.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_vnt_app.podspec
rust_builder/windows/: CMakeLists.txt
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
(+107 files in other folders)
