[package]
name = "rust_lib_vnt_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]

serde = { version = "1.0", features = ["derive"] }
flutter_rust_bridge = "=2.1.0"
vnt = { git = "https://github.com/lbl8603/vnt.git", branch = "1.2.x", features = ["ring-cipher", "wss"] }
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["full"] }

log = "0.4.17"
log4rs = "1.2.0"


[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
